@@ -8,7 +8,7 @@ require 'watir/waiter' # this will be removed in some future version
 require 'watir/wait'
 require 'watir/wait_helper'
 require 'watir/element_extensions'
-require 'watir/core_ext'
+require 'watir/util'
 require 'watir/exceptions'
 require 'watir/matches'
 require 'watir/browser'
